--- a/view/common/block-layout/item-showcase-block-full-width-metadata.phtml
+++ b/view/common/block-layout/item-showcase-block-full-width-metadata.phtml
@@ -1,3 +1,10 @@
+<div class="grix-x grid-container">
+    <?php if (!empty($heading)): ?>
+        <div class="media-text-heading">
+            <h3 class="h2 padding-vertical-1"><?= $heading ?></h3>
+        </div>
+    <?php endif; ?>
+</div>
 <div class="full-width-css col-container col-media-container medium-padding-1" data-target-region-id="<?php echo $this->targetID; ?>">
     <?php foreach ($attachments as $attachment): ?>
         <div class="max-image-height item resource small-margin-bottom-1 medium-margin-bottom-2 text-center">
