--- a/view/common/block-layout/item-showcase-multiples-full-width.phtml
+++ b/view/common/block-layout/item-showcase-multiples-full-width.phtml
@@ -1,3 +1,10 @@
+<div class="grix-x grid-container">
+    <?php if (!empty($heading)): ?>
+        <div class="media-text-heading">
+            <h3 class="h2 padding-vertical-1"><?= $heading ?></h3>
+        </div>
+    <?php endif; ?>
+</div>
 <div class="full-width-css item-showcase-multiples grid-x grid-margin-x flex-container align-spaced small-padding-0">
     <?php foreach ($attachments as $attachment): ?>
         <div class="card auto item resource flex-container flex-dir-column align-middle margin-1 medium-margin-bottom-2">
