--- a/view/common/block-layout/resource-text-openseadragon-off-canvas.phtml
+++ b/view/common/block-layout/resource-text-openseadragon-off-canvas.phtml
@@ -81,9 +81,9 @@ $lang = $filterLocale ? $this->lang() : null;
                     <div class="metadata margin-bottom-1 separator-center">
                         <?php $showTitleOption = $this->showTitleOption; ?>
                         <?php if ($showTitleOption == 'item_title'): ?>
-                        <h3 class="h2"><?php echo $item->link($item->displayTitle()); ?></h3>
+                        <h3><?php echo $item->link($item->displayTitle()); ?></h3>
                         <?php elseif ($showTitleOption == 'file_name'): ?>
-                        <h3 class="h2"><?php echo $item->link($media->displayTitle()); ?></h3>
+                        <h3><?php echo $item->link($media->displayTitle()); ?></h3>
                         <?php endif; ?>
                         <?php
                         $date = $item->value('dcterms:date');
