--- a/view/common/block-layout/site-promo.phtml
+++ b/view/common/block-layout/site-promo.phtml
@@ -21,7 +21,7 @@
         </div>
     <?php endforeach; ?>
     <div class="site-promo-text large-6 flex-container flex-dir-column padding-1 medium-padding-2">
-        <h3 class="h2"><a href="<?php echo $this->baseUrl . $this->siteSelectLink; ?>"><?php echo $this->siteSelectTitle; ?></a></h3>
+        <h3><a href="<?php echo $this->baseUrl . $this->siteSelectLink; ?>"><?php echo $this->siteSelectTitle; ?></a></h3>
         <?php if($this->containsHarmfulContent == 1): ?>
             <div class="site-promo-harmful-content-flag">
                 <h3>May contain harmful content</h3>
