Revised scrollbar for Openseadragon block

--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -2133,5 +2133,5 @@ figure.max-image-height img,
 /*Maximum Block Height*/ 
 .max-block-height {
   height: 100vh;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
