--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -543,7 +543,7 @@ nav.breadcrumbs {
     }
   }
 
-  .hero-title h2 p {
+  .hero-title h2 {
     background-color: rgba(255, 255, 255, 0.8);
     line-height: 1.2;
     padding: 1.5 * $global-padding 2.5 * $global-padding;
@@ -564,16 +564,21 @@ nav.breadcrumbs {
     width: 100%;
   }
 
+  .hero-title-bottom .hero-title {
+    width: 100%;
+    max-width: 100%;
+  }
+
   .hero-image .hero-title-bottom h2 {
     width: 100%;
     margin-bottom: 0;
   }
 
-  .hero-title-bottom h2 p {
+  .hero-title-bottom h2 {
     margin-bottom: 0;
     background-color: rgba(255, 255, 255, 0.8);
     line-height: 1.2;
-    padding: 1.5 * $global-padding 2.5 * $global-padding;
+    padding: $global-padding 2.5 * $global-padding;
     font-weight: 300;
     @include breakpoint(medium) {
       line-height: 1.4;
@@ -585,6 +590,11 @@ nav.breadcrumbs {
     @include breakpoint(xlarge) {
       padding-left: 5 * $global-padding
     }
+  }
+
+  h3.caption {
+      background: #e7e7e7;
+      padding: 0.1em 0;
   }
   
   /*Hero image sizes*/
