--- a/view/common/block-layout/asset-hero-title-bottom.phtml
+++ b/view/common/block-layout/asset-hero-title-bottom.phtml
@@ -25,27 +25,27 @@ $escape = $plugins->get('escapeHtml');
 $escapeAttr = $plugins->get('escapeHtmlAttr');
 ?>
 
-<?php if (!empty($heading)) : ?>
-    <h2><?= $escape($heading) ?></h2>
-<?php endif; ?>
-
 <?php if (!count($attachments)) return; ?>
 <?php $attachment = $attachments[array_rand($attachments)]; ?>
 <?php if (empty($attachment['asset'])) return; ?>
 
 <div class="full-width-css">
-    <div class="hero-image image-large flex-container region-splash <?= $escapeAttr($attachment['class']) ?>" style="background-image:linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.4)),url(<?= $attachment['asset']->assetUrl() ?>);">
-        <?php if ($attachment['caption']) : ?>
+    <div class="hero-image image-large region-splash flex-container <?= $escapeAttr($attachment['class']) ?>" style="background-image:linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.4)),url(<?= $attachment['asset']->assetUrl() ?>);">
+        <?php if (!empty($heading)) : ?>
             <div class="grid-x hero-title-bottom align-bottom">
-                <h2><?= $attachment['caption'] ?></h2>
-                <?php $attachmentUrl = $attachment['page'] ? $attachment['page']->siteUrl() : ($attachment['url'] ?? null); ?>
-                <?php if ($attachment['alt_link_title'] && $attachmentUrl) : ?>
-                    <a href="<?= $escapeAttr($attachmentUrl) ?>"><button class="btn knowmore"><?= $escape($attachment['alt_link_title']) ?></button></a>
-                <?php endif; ?>
+                <div class="hero-title">
+                    <h2><?= $heading ?></h2>
+                    <?php $attachmentUrl = $attachment['page'] ? $attachment['page']->siteUrl() : ($attachment['url'] ?? null); ?>
+                    <?php if ($attachment['alt_link_title'] && $attachmentUrl) : ?>
+                        <a href="<?= $escapeAttr($attachmentUrl) ?>"><button class="btn knowmore"><?= $escape($attachment['alt_link_title']) ?></button></a>
+                    <?php endif; ?>
+                </div>
             </div>
         <?php endif; ?>
     </div>
-    <?php if (!empty($heading)) : ?>
-        <p class="h4 padding-horizontal-1 medium-large-padding-horizontal-2 large-padding-horizontal-3"><?= $escape($heading) ?></p>
+    <?php if ($attachment['caption'] !== ''): ?>
+        <h3 class="h4 caption padding-horizontal-1 medium-large-padding-horizontal-2 large-padding-horizontal-3">
+            <?= empty($attachment['raw']) ? $attachment['caption'] : $escape($attachment['caption']) ?>
+        </h3>
     <?php endif; ?>
 </div>
