--- a/view/common/block-layout/asset-hero-3-4-width.phtml
+++ b/view/common/block-layout/asset-hero-3-4-width.phtml
@@ -26,27 +26,28 @@ $escapeAttr = $plugins->get('escapeHtmlAttr');
 ?>
 
 <div class="full-width-css grid-x region-splash">
-    <?php if (!empty($heading)) : ?>
-        <div class="flex-container region-splash"> 
-            <h2><?= $escape($heading) ?></h2>
-        </div>
-    <?php endif; ?>
-
     <?php if (!count($attachments)) return; ?>
     <?php $attachment = $attachments[array_rand($attachments)]; ?>
     <?php if (empty($attachment['asset'])) return; ?>
-    <div class="small-12 medium-8 xlarge-9">
-        <div class="hero-image image-xlarge region-splash flex-container <?= $escapeAttr($attachment['class']) ?>" style="background-image:linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.4)),url(<?= $attachment['asset']->assetUrl() ?>);">
+    <div class="small-12 large-7">
+        <div class="hero-image image-xlarge flex-container <?= $escapeAttr($attachment['class']) ?>" style="background-image:linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.4)),url(<?= $attachment['asset']->assetUrl() ?>);">
         </div>
     </div>
 
+    <div class="small-12 large-5 flex-container flex-dir-column align-middle align-center colour-scheme-4 text-treatment-2 margin-bottom-0"> 
+
+    <?php if (!empty($heading)) : ?>
+        <div class="flex-container"> 
+            <h2 class="h1 padding-1 large-padding-horizontal-2 xlarge-padding-horizontal-3"><?= $escape($heading) ?></h2>
+        </div>
+    <?php endif; ?>
+
     <?php if ($attachment['caption']) : ?>
-        <div class="small-12 medium-4 xlarge-3 flex-container align-middle align-center region-splash colour-scheme-4 text-treatment-2 margin-bottom-0"> 
-            <h2 class="text-treatment-3 large-padding-2"><?= $attachment['caption'] ?></h2>
-            <?php $attachmentUrl = $attachment['page'] ? $attachment['page']->siteUrl() : ($attachment['url'] ?? null); ?> 
-            <?php if ($attachment['alt_link_title'] && $attachmentUrl) : ?>
-                <a href="<?= $escapeAttr($attachmentUrl) ?>"><button class="btn knowmore"><?= $escape($attachment['alt_link_title']) ?></button></a>
-            <?php endif; ?>
+        <h3 class="h4 padding-1 large-padding-horizontal-2 xlarge-padding-horizontal-3"><?= $attachment['caption'] ?></h3>
+        <?php $attachmentUrl = $attachment['page'] ? $attachment['page']->siteUrl() : ($attachment['url'] ?? null); ?> 
+        <?php if ($attachment['alt_link_title'] && $attachmentUrl) : ?>
+            <a href="<?= $escapeAttr($attachmentUrl) ?>"><button class="btn knowmore"><?= $escape($attachment['alt_link_title']) ?></button></a>
+        <?php endif; ?>
         </div>
     <?php endif; ?>
 </div>
