--- a/view/common/block-layout/item-showcase-openseadragon-dark.phtml
+++ b/view/common/block-layout/item-showcase-openseadragon-dark.phtml
@@ -5,8 +5,9 @@
         </div>
     <?php endif; ?>
 </div>
-<div class="full-width-css medium-padding-horizontal-1 large-padding-horizontal-2 xlarge-padding-horizontal-3 background-colour-uom-footer">
-    <div class="col-container col-media-container medium-padding-1" data-target-region-id="<?php echo $this->targetID; ?>">
+
+<div class="full-width-css background-colour-uom-footer">
+    <div class="col-container col-media-container medium-padding-horizontal-1 large-padding-horizontal-2 xlarge-padding-horizontal-3">
         <?php foreach ($attachments as $attachment): ?>
             <div class="item-showcase-openseadragon item resource small-margin-bottom-1 medium-margin-bottom-2 text-center">
                 <?php
