--- a/view/common/block-layout/resource-text-openseadragon-dark.phtml
+++ b/view/common/block-layout/resource-text-openseadragon-dark.phtml
@@ -61,19 +61,16 @@ $lang = $filterLocale ? $this->lang() : null;
                     endif;
                 endif;
 
-                $caption = $attachment->caption();
-            ?>
-            <div class="item resource">
-                <?= $render ?>
-                <?php if ($attachment->caption()): ?>
-                <div class="caption">
-                    <figcaption class="orbit-caption caption"><?php echo $caption; ?></figcaption>
-                </div>
-                <?php endif; ?>
+             $caption = $attachment->caption();
+             ?>
+            <?= $render ?>
+            <div class="caption">
+                <?= $caption ?>                   
             </div>
-            <?php endforeach; ?>
-        </div>
-    </div>
+         <?php
+         endforeach; ?>
+      </div>
+   </div>
     <div class="resource-text max-block-height large-5 xlarge-4 flex-container flex-dir-column padding-1 large-padding-2 xlarge-padding-3">
     <div class="metadata margin-bottom-1 separator-center">
         <?php $showTitleOption = $this->showTitleOption; ?>
