--- a/view/common/block-layout/resource-text-openseadragon.phtml
+++ b/view/common/block-layout/resource-text-openseadragon.phtml
@@ -1,65 +1,73 @@
 <?php
-   /**
-    * @var \Laminas\View\Renderer\PhpRenderer $this
-    * @var \Omeka\Api\Representation\SitePageBlockRepresentation $block
-    * @var \Omeka\Api\Representation\SiteBlockAttachmentRepresentation[] $attachments
-    * @var string $heading
-    * @var string $html
-    * @var string $alignmentClass "left" or "right"
-    * @var string $thumbnailType
-    * @var string $showTitleOption "item_title" or "file_name" or "none".
-    * @var string $captionPosition "center", "left" or "right".
-    */
-   
-   $escape = $this->plugin('escapeHtml');
-   $hyperlink = $this->plugin('hyperlink');
-   $siteSetting = $this->plugin('siteSetting');
-   
-   $linkType = $siteSetting('attachment_link_type', 'item');
-   
-   $filterLocale = (bool) $this->siteSetting('filter_locale_values');
-   $lang = $filterLocale ? $this->lang() : null;
-   ?>
+/**
+ * @var \Laminas\View\Renderer\PhpRenderer $this
+ * @var \Omeka\Api\Representation\SitePageBlockRepresentation $block
+ * @var \Omeka\Api\Representation\SiteBlockAttachmentRepresentation[] $attachments
+ * @var string $heading
+ * @var string $html
+ * @var string $alignmentClass "left" or "right"
+ * @var string $thumbnailType
+ * @var string $showTitleOption "item_title" or "file_name" or "none".
+ * @var string $captionPosition "center", "left" or "right".
+ */
+
+$escape = $this->plugin("escapeHtml");
+$hyperlink = $this->plugin("hyperlink");
+$siteSetting = $this->plugin("siteSetting");
+
+$linkType = $siteSetting("attachment_link_type", "item");
+
+$filterLocale = (bool) $this->siteSetting("filter_locale_values");
+$lang = $filterLocale ? $this->lang() : null;
+?>
 <div class="block media-text full-width-css grid-x grid-padding-x padding-1 large-padding-2 margin-bottom-1">
    <?php if (!empty($heading)): ?>
    <div class="media-text-heading margin-bottom-1">
       <h3 class="h2 padding-vertical-1"><?= $escape($heading) ?></h3>
    </div>
    <?php endif; ?>
-   <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file large-7 xlarge-8">
+   <div class="<?= $alignmentClass .
+       " " .
+       $thumbnailType .
+       " captions-" .
+       $captionPosition ?> media file large-7 xlarge-8">
       <div class="attachments resource-text-openseadragon">
-         <?php
-            foreach ($attachments as $attachment):
-                $render = null;
-                $title = null;
-                $link = null;
-                $item = $attachment->item();
-                if ($item):
-                    $media = $attachment->media() ? : $item->primaryMedia();
-                    $mediaRenderer = $media->renderer();
-                    $mediaType = $media->mediaType();
-                   echo $media->render([
-                   'thumbnailType' => $thumbnailType,
-                   'link' => $link,
-                    ]);
-            
-                    if ($showTitleOption == 'item_title'):
-                        $title = $item->displayTitle(null, $lang);
-                    elseif ($media && $showTitleOption == 'file_name'):
-                        $title = $media->displayTitle(null, $lang);
-                    endif;
-            
-                    if ($title):
-                        if ($media && $linkType === 'media'):
-                            $link = $media->link($title);
-                        elseif ($media && $linkType === 'original' && $media->hasOriginal()):
-                            $link = $hyperlink($title, $media->originalUrl());
-                        else:
-                            $link = $item->link($title);
-                        endif;
-                    endif;
-                endif;
-            
+         <?php foreach ($attachments as $attachment):
+
+             $render = null;
+             $title = null;
+             $link = null;
+             $item = $attachment->item();
+             if ($item):
+                 $media = $attachment->media() ?: $item->primaryMedia();
+                 $mediaRenderer = $media->renderer();
+                 $mediaType = $media->mediaType();
+                 echo $media->render([
+                     "thumbnailType" => $thumbnailType,
+                     "link" => $link,
+                 ]);
+
+                 if ($showTitleOption == "item_title"):
+                     $title = $item->displayTitle(null, $lang);
+                 elseif ($media && $showTitleOption == "file_name"):
+                     $title = $media->displayTitle(null, $lang);
+                 endif;
+
+                 if ($title):
+                     if ($media && $linkType === "media"):
+                         $link = $media->link($title);
+                     elseif (
+                         $media &&
+                         $linkType === "original" &&
+                         $media->hasOriginal()
+                     ):
+                         $link = $hyperlink($title, $media->originalUrl());
+                     else:
+                         $link = $item->link($title);
+                     endif;
+                 endif;
+             endif;
+
              $caption = $attachment->caption();
              ?>
             <?= $render ?>
@@ -71,34 +79,34 @@
       </div>
    </div>
    <div class="resource-text max-block-height large-5 xlarge-4 flex-container flex-dir-column padding-1 large-padding-2 xlarge-padding-3">
-      <div class="metadata margin-bottom-1 separator-center">
-         <?php $showTitleOption = $this->showTitleOption; ?>
-         <?php if ($showTitleOption == 'item_title'): ?>
-         <h3><?php echo $item->link($item->displayTitle()); ?></h3>
-         <?php elseif ($showTitleOption == 'file_name'): ?>
-         <h3><?php echo $item->link($media->displayTitle()); ?></h3>
-         <?php endif; ?>
-         <?php
-            $date = $item->value('dcterms:date');
-            if ($date):
+        <div class="metadata margin-bottom-1 separator-center">
+            <?php $showTitleOption = $this->showTitleOption; ?>
+            <?php if ($showTitleOption == "item_title"): ?>
+            <h3><?php echo $item->link($item->displayTitle()); ?></h3>
+            <?php elseif ($showTitleOption == "file_name"): ?>
+            <h3><?php echo $item->link($media->displayTitle()); ?></h3>
+            <?php endif; ?>
+            <?php
+            $date = $item->value("dcterms:date");
+            if ($date): ?>
+            <h3><small date><?php echo $date; ?></small></h3>
+            <?php endif;
             ?>
-         <h3><small date><?php echo $date; ?></small></h3>
-         <?php endif; ?>
-         <?php
-            $origin = $item->value('curation:location');
-            if ($origin):
+            <?php
+            $origin = $item->value("curation:location");
+            if ($origin): ?>
+            <h3><small origin><?php echo $origin; ?></small></h3>
+            <?php endif;
             ?>
-         <h3><small origin><?php echo $origin; ?></small></h3>
-         <?php endif; ?>
-      </div>
-      <div class="text font-wide">
-        <?= $html ?>
-        <?php
-         $identifier = $item->value('dcterms:identifier');
-         if ($identifier):
-         ?>
-      <h3 class="h4"><small><?php echo 'Ref. ' . $identifier; ?></small></h3>
-      <?php endif; ?>
+        </div>
+        <div class="text font-wide">
+            <?= $html ?>
+            <?php
+            $identifier = $item->value("dcterms:identifier");
+            if ($identifier): ?>
+            <h3 class="h4"><small><?php echo "Ref. " . $identifier; ?></small></h3>
+            <?php endif;
+            ?>
+        </div>
     </div>
-</div>
 </div>
