--- a/view/common/block-layout/item-showcase-openseadragon.phtml
+++ b/view/common/block-layout/item-showcase-openseadragon.phtml
@@ -7,7 +7,7 @@
 </div>
 <div class="col-container col-media-container medium-padding-1">
     <?php foreach ($attachments as $attachment): ?>
-        <div class="item-showcase-openseadragon item resource small-margin-bottom-1 medium-margin-bottom-2 text-center">
+        <div class="item-showcase item-showcase-openseadragon item resource small-margin-bottom-1 medium-margin-bottom-2 text-center">
             <?php
             $item = $attachment->item();
             if ($item):
