--- a/view/common/block-layout/item-showcase-block-align-middle-full-width.phtml
+++ b/view/common/block-layout/item-showcase-block-align-middle-full-width.phtml
@@ -7,7 +7,7 @@
 </div>
 <div class="full-width-css col-container full-item col-media-container medium-padding-1" data-target-region-id="<?php echo $this->targetID; ?>">
     <?php foreach ($attachments as $attachment): ?>
-        <div class="item-showcase-cover-centre item resource text-center">
+        <div class="item-showcase item-showcase-cover-centre item resource text-center">
             <?php
             $item = $attachment->item();
             if ($item):
