--- a/view/common/block-layout/item-showcase-block-full-width-metadata.phtml
+++ b/view/common/block-layout/item-showcase-block-full-width-metadata.phtml
@@ -7,7 +7,7 @@
 </div>
 <div class="full-width-css col-container col-media-container medium-padding-1" data-target-region-id="<?php echo $this->targetID; ?>">
     <?php foreach ($attachments as $attachment): ?>
-        <div class="max-image-height item resource small-margin-bottom-1 medium-margin-bottom-2 text-center">
+        <div class="item-showcase max-image-height item resource small-margin-bottom-1 medium-margin-bottom-2 text-center">
             <?php
             $item = $attachment->item();
             if ($item):
