--- a/view/common/block-layout/item-showcase-multiples-full-width.phtml
+++ b/view/common/block-layout/item-showcase-multiples-full-width.phtml
@@ -7,7 +7,7 @@
 </div>
 <div class="full-width-css item-showcase-multiples grid-x grid-margin-x flex-container align-spaced small-padding-0">
     <?php foreach ($attachments as $attachment): ?>
-        <div class="card auto item resource flex-container flex-dir-column align-middle margin-1 medium-margin-bottom-2">
+        <div class="item-showcase card auto item resource flex-container flex-dir-column align-middle margin-1 medium-margin-bottom-2">
             <?php
             $item = $attachment->item();
             if ($item):
