--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -366,8 +366,8 @@ nav.breadcrumbs {
 /*Display full item for Item Showcase*/ 
 .col-container.full-item {
   justify-items: center;
-  align-items: end;
-  }
+  align-items: center; /*Changed from end 13/09/23 JMc*/ 
+}
 
 .media-details-container > .col-single:only-child {
   max-width: rem-calc(800);
@@ -427,7 +427,7 @@ nav.breadcrumbs {
 /*Increase font-size for single Item Showcase blocks*/
 .item-showcase h2,
 .item-showcase h3 {
-  font-size: 1.3 * $global-font-size;
+  font-size: 1.35 * $global-font-size;
   font-weight: 400;
 }
 
