--- a/view/common/block-layout/resource-text-openseadragon-off-canvas.phtml
+++ b/view/common/block-layout/resource-text-openseadragon-off-canvas.phtml
@@ -27,7 +27,9 @@ $lang = $filterLocale ? $this->lang() : null;
         <h3 class="h2 padding-vertical-1"><?= $escape($heading) ?></h3>
     </div>
     <?php endif; ?>
-    <div class="media file small-12">
+    <button type="button" class="button" data-toggle="offCanvasPush">View Text</button>
+    <div class="cell off-canvas-content">
+        <div class="media file medium-12">
         <div class="attachments resource-text-openseadragon">
                 <?php
                 foreach ($attachments as $attachment):
@@ -60,55 +62,37 @@ $lang = $filterLocale ? $this->lang() : null;
                             endif;
                         endif;
                     endif;
-
-                    $caption = $attachment->caption();
+                $caption = $attachment->caption();
                 ?>
                 <div class="item resource">
                     <?= $render ?>
                     <?php if ($attachment->caption()): ?>
                     <div class="caption">
-                        <figcaption class="orbit-caption caption"><?php echo $caption; ?></figcaption>
+                        <?php echo $caption; ?>
                     </div>
                     <?php endif; ?>
                 </div>
                 <?php endforeach; ?>
             </div>
-        </div>
+    <div class="medium-4">
         <div class="off-canvas-wrapper">
-            <div class="off-canvas-content" id="SeadragonOffCanvas" data-off-canvas-content>
-                <button type="button" class="button" data-toggle="SeadragonOffCanvas">View Text</button>
+            <div class="off-canvas-absolute position-right" id="offCanvasPush" data-off-canvas-content>
                 <div class="resource-text flex-container flex-dir-column align-center padding-1 large-padding-2 xlarge-padding-3 off-canvas-absolute position-left" data-off-canvas data-content-scroll="false">
                     <div class="metadata margin-bottom-1 separator-center">
                         <?php $showTitleOption = $this->showTitleOption; ?>
                         <?php if ($showTitleOption == 'item_title'): ?>
-                        <h3><?php echo $item->link($item->displayTitle()); ?></h3>
-                        <?php elseif ($showTitleOption == 'file_name'): ?>
-                        <h3><?php echo $item->link($media->displayTitle()); ?></h3>
+                            <h3><?php echo $item->link($item->displayTitle()); ?></h3>
+                            <?php elseif ($showTitleOption == 'file_name'): ?>
+                            <h3><?php echo $item->link($media->displayTitle()); ?></h3>
                         <?php endif; ?>
-                        <?php
-                        $date = $item->value('dcterms:date');
-                        if ($date):
-                        ?>
-                    <h3><small date><?php echo $date; ?></small></h3>
-                    <?php endif; ?>
-                    <?php
-                        $origin = $item->value('curation:location');
-                        if ($origin):
-                        ?>
-                    <h3><small origin><?php echo $origin; ?></small></h3>
-                    <?php endif; ?>
                     </div>
                     <div class="text font-wide">
                         <?= $html ?>
-                        <?php
-                        $identifier = $item->value('dcterms:identifier');
-                        if ($identifier):
-                        ?>
-                        <h3 class="h4"><small><?php echo 'Ref. ' . $identifier; ?></small></h3>
-                        <?php endif; ?>
                     </div>
                 </div>
             </div>
+        </div>
+        </div>
         </div>
     </div>
 </div>
