--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -367,7 +367,7 @@ nav.breadcrumbs {
 /*Display full item for Item Showcase*/ 
 .col-container.full-item {
   justify-items: center;
-  align-items: baseline; /*Changed from end 13/09/23 JMc*/ 
+  align-items: center; /*Changed from end 13/09/23 JMc*/ 
 }
 
 .media-details-container > .col-single:only-child {
@@ -434,11 +434,12 @@ nav.breadcrumbs {
 .item-showcase h2,
 .item-showcase h3 {
   font-size: 1.2 * $global-font-size;
-  font-weight: 400;
+  font-weight: 300;
 }
 
 .item-showcase:only-child h2,
 .item-showcase:only-child h3 {
+  font-weight: 600;
   font-size: 1.7 * $global-font-size;
   margin-top: $global-margin;
   @include breakpoint (large) {
