--- a/view/common/block-layout/legacy-blocks/item-showcase-multiples-full-width-old.phtml
+++ b/view/common/block-layout/legacy-blocks/item-showcase-multiples-full-width-old.phtml
@@ -2,16 +2,9 @@
     $itemCount = count($this->attachments);
 ?>
 
-<div class="grix-x grid-container">
-    <?php if (!empty($heading)): ?>
-        <div class="media-text-heading">
-            <h3 class="h2 padding-vertical-1"><?= $heading ?></h3>
-        </div>
-    <?php endif; ?>
-</div>
-<div class="item-showcase-multiples grid-x grid-margin-x flex-container align-spaced small-padding-0">
+<div class="item-showcase-multiples full-width-css grid-x grid-margin-x flex-container align-spaced small-padding-0 medium-padding-1 large-padding-2">
     <?php foreach ($attachments as $attachment): ?>
-        <div class="item-showcase card auto item item-count-<?php echo $itemCount; ?> resource flex-container flex-dir-column align-middlemargin-1 medium-margin-bottom-2">
+        <div class="card auto item resource flex-container flex-dir-column align-middle margin-1 medium-margin-bottom-2">
             <?php
             $item = $attachment->item();
             if ($item):
