--- a/view/common/block-layout/item-showcase-openseadragon-dark.phtml
+++ b/view/common/block-layout/item-showcase-openseadragon-dark.phtml
@@ -7,7 +7,7 @@
 </div>
 
 <div class="full-width-css background-colour-uom-footer">
-    <div class="col-container col-media-container medium-padding-horizontal-1 large-padding-horizontal-2 xlarge-padding-horizontal-3">
+    <div class="col-container col-media-container medium-padding-horizontal-1 large-padding-horizontal-2">
         <?php foreach ($attachments as $attachment): ?>
             <div class="item-showcase item-showcase-openseadragon item resource small-margin-bottom-1 medium-margin-bottom-2 text-center">
                 <?php
