--- a/view/common/block-layout/html-introduction-dark.phtml
+++ b/view/common/block-layout/html-introduction-dark.phtml
@@ -15,7 +15,9 @@ $escape = $this->plugin('escapeHtml');
             <?php if (!empty($heading)): ?>
             <h2><?= $escape($heading) ?></h2>
             <?php endif; ?>
-            <?= $html ?>
+            <div class="padding-vertical-1 medium-padding-vertical-2 large-padding-vertical-3">
+                <?= $html ?>
+            </div>
         </div>
     </div>
 </div>
