--- a/view/common/block-layout/resource-text-video-16_9.phtml
+++ b/view/common/block-layout/resource-text-video-16_9.phtml
@@ -28,7 +28,7 @@ $lang = $filterLocale ? $this->lang() : null;
     </div>
     <?php endif; ?>
     <div class="cell <?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file xlarge-8 flex-container flex-dir-column align-center">
-        <div class="attachments responsive-embed aspect16_9">
+        <div class="attachments responsive-embed aspect16_9 radius">
             <?php
             foreach ($attachments as $attachment):
                 $render = null;
