--- a/view/common/block-layout/resource-text-video.phtml
+++ b/view/common/block-layout/resource-text-video.phtml
@@ -28,7 +28,7 @@ $lang = $filterLocale ? $this->lang() : null;
     </div>
     <?php endif; ?>
     <div class="cell <?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file xlarge-7 flex-container flex-dir-column align-center video-wrap">
-        <div class="attachments responsive-embed">
+        <div class="attachments responsive-embed radius">
             <?php
             foreach ($attachments as $attachment):
                 $render = null;
