Centred caption seafoam.scss

--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -333,6 +333,7 @@ nav.breadcrumbs {
 /*Item Showcase*/
 .item-showcase .caption {
   max-width: rem-calc(750);
+  margin: 0 auto;
 }
 
 .item-showcase .separator-center {
