--- a/view/common/block-layout/resource-text-sensitive-content-full-width.phtml
+++ b/view/common/block-layout/resource-text-sensitive-content-full-width.phtml
@@ -29,7 +29,7 @@ $lang = $filterLocale ? $this->lang() : null;
     <?php endif; ?>
     <div class="large-7">
         <div class="flex-container flex-dir-column align-spaced large-padding-right-1 large-padding-right-0 large-padding-top-1">
-            <div class="attachments">
+            <div class="attachments flex-container align-center">
                 <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file media-text-image unblur-image" id="blur-image" data-toggler=".unblur-image">
                 
                     <?php
