Added media sidebar

--- a/view/omeka/site/item/show.phtml
+++ b/view/omeka/site/item/show.phtml
@@ -28,46 +28,73 @@ $valueLang = $filterLocale ? [$lang, ''] : null;
 <h3 class="label"><?php echo $translate('Item'); ?></h3>
 </div>
 
+
+
 <div class="<?php echo ($showLayout == 'inline') ? 'inline' : 'stack'; ?>">
     <?php $this->trigger('view.show.before'); ?>
-    <?php if ($fullWidthMainHasBlocks): ?>
-    <div class="full-width-main margin-bottom-2 xlarge-margin-bottom-3">
-        <?php echo $fullWidthMainBlockContent->getBlocks(); ?>
+        
+
+  <?php if ($embedMedia): ?>
+  <?php if ($itemMedia): ?>
+    <div class="padding-top-2 padding-bottom-3 medium-padding-top-4 medium-padding-bottom-4">
+      <div class="grid-x" id="media-wrapper">
+        <?php if ((count($itemMedia) > 1)): ?>
+          <div class="cell medium-10">
+            <div class="media-embeds">
+              <div class="tab-content" id="mediaTabContent">
+                <?php $panel_id = 1; ?>
+                <?php foreach ($itemMedia as $media): ?>
+                  <div class="tab-pane fade <?php echo ($panel_id == 1 ? ' show active' : ''); ?>"
+                    id="media-<?php echo $panel_id; ?>" role="tabpanel" aria-labelledby="media-<?php echo $panel_id; ?>-tab">
+                    <?php echo $media->render(); ?>
+                  </div>
+                  <?php
+                  $panel_id++;
+                endforeach;
+                ?>
+              </div>
+            </div>
+          </div>
+          <div class="cell medium-1" id="media-sidebar">
+            <ul class="nav align-items-center flex-md-column d-md-block" id="mediaTab" role="tablist">
+              <?php $tab_id = 1; ?>
+              <?php foreach ($itemMedia as $media): ?>
+                <li class="nav-item p-md-0 mb-md-3" role="presentation">
+                  <button
+                    class="nav-link text-secondary border-0 shadow-sm rounded p-0<?php echo ($tab_id == 1 ? ' active' : ''); ?>"
+                    id="media-<?php echo $tab_id; ?>-tab" data-bs-toggle="tab" data-bs-target="#media-<?php echo $tab_id; ?>"
+                    type="button" role="tab" aria-controls="media-<?php echo $tab_id; ?>"
+                    aria-selected="<?php echo ($tab_id == 1 ? 'true' : 'false'); ?>">
+                    <?php echo $this->thumbnail($media, 'medium', ['class' => 'rounded img-fluid', 'alt' => $media->displayTitle(), 'title' => $media->displayTitle(), 'data-bs-toggle' => 'tooltip']); ?>
+                  </button>
+                </li>
+                <?php
+                $tab_id++;
+              endforeach;
+              ?>
+            </ul>
+            <button class="btn-arrow btnNext border-0 bg-transparent text-secondary d-none d-md-block mx-auto" type="button"
+              aria-controls="mediaTabContent" aria-label="Next">
+              <i class="fas fa-chevron-down" title="Next" aria-hidden="true">
+              </i>
+            </button>
+          </div>
+        <?php else: ?>
+          <div class="col">
+            <div class="media-embeds">
+              <?php foreach ($itemMedia as $media): ?>
+                <?php echo $media->render(); ?>
+              <?php endforeach; ?>
+            </div>
+          </div>
+        <?php endif; ?>
+      </div>
     </div>
-    <?php endif; ?>
+    <?php endif; ?>  
+    <?php endif; ?>              
 
-    <?php if ($mainWithSidebarHasBlocks || $leftSidebarHasBlocks || $rightSidebarHasBlocks): ?>
-    
-    <?php 
-    if ($leftSidebarHasBlocks && $rightSidebarHasBlocks) {
-        $sidebarWidth = '3';
-        $mainWidth = '6';
-    } else {
-        $sidebarWidth = '4';
-        $mainWidth = '8';
-    }
-    ?>
-    
-    <div class="grid-x grid-margin-x margin-bottom-1 large-margin-bottom-2 xlarge-margin-bottom-3">
-        <?php if ($leftSidebarHasBlocks): ?>
-        <div class="left-sidebar cell medium-<?php echo $sidebarWidth; ?> margin-top-1 medium-margin-top-2 xlarge-margin-top-3">
-            <?php echo $leftSidebarBlockContent->getBlocks(); ?>
-        </div>
-        <?php endif; ?>
 
-        <?php if ($mainWithSidebarHasBlocks): ?>
-        <div class="main-with-sidebar cell medium-<?php echo $mainWidth; ?> margin-top-1 medium-margin-top-2 xlarge-margin-top-3">
-            <?php echo $mainWithSidebarBlockContent->getBlocks(); ?>
-        </div>
-        <?php endif; ?>
 
-        <?php if ($rightSidebarHasBlocks): ?>
-        <div class="right-sidebar cell medium-<?php echo $sidebarWidth; ?> background-colour-uom-footer margin-top-1 large-margin-top-0 padding-1 large-padding-2 xlarge-padding-3">
-            <?php echo $rightSidebarBlockContent->getBlocks(); ?>
-        </div>
-        <?php endif; ?>
-    </div>
-    <?php endif; ?>
 
     <?php $this->trigger('view.show.after'); ?>
 </div>
