--- a/view/omeka/site/item/show.phtml
+++ b/view/omeka/site/item/show.phtml
@@ -59,13 +59,13 @@ $valueLang = $filterLocale ? [$lang, ''] : null;
             <ul class="nav align-items-center flex-md-column d-md-block" id="mediaTab" role="tablist">
               <?php $tab_id = 1; ?>
               <?php foreach ($itemMedia as $media): ?>
-                <li class="nav-item p-md-0 mb-md-3" role="presentation">
+                <li class="nav-item" role="presentation">
                   <button
-                    class="nav-link text-secondary border-0 shadow-sm rounded p-0<?php echo ($tab_id == 1 ? ' active' : ''); ?>"
-                    id="media-<?php echo $tab_id; ?>-tab" data-bs-toggle="tab" data-bs-target="#media-<?php echo $tab_id; ?>"
+                    class="nav-link text-secondary<?php echo ($tab_id == 1 ? ' active' : ''); ?>"
+                    id="media-<?php echo $tab_id; ?>-tab" data-toggler="tab" data-toggle="#media-<?php echo $tab_id; ?>"
                     type="button" role="tab" aria-controls="media-<?php echo $tab_id; ?>"
                     aria-selected="<?php echo ($tab_id == 1 ? 'true' : 'false'); ?>">
-                    <?php echo $this->thumbnail($media, 'medium', ['class' => 'rounded img-fluid', 'alt' => $media->displayTitle(), 'title' => $media->displayTitle(), 'data-bs-toggle' => 'tooltip']); ?>
+                    <?php echo $this->thumbnail($media, 'medium', ['class' => 'rounded img-fluid', 'alt' => $media->displayTitle(), 'title' => $media->displayTitle(), 'data-toggler' => 'tooltip']); ?>
                   </button>
                 </li>
                 <?php
