Revised max block height to exclude smaller screen sizes

--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -2225,7 +2225,9 @@ figure.max-image-height img,
 }
 
 /*Maximum Block Height*/ 
+@include breakpoint(large) {
 .max-block-height {
   height: 100vh;
   overflow-y: auto;
+}
 }
