--- a/view/omeka/site/item/show.phtml
+++ b/view/omeka/site/item/show.phtml
@@ -21,6 +21,28 @@ $rightSidebarHasBlocks = $rightSidebarBlockContent->hasBlocks();
 $filterLocale = (bool) $this->siteSetting('filter_locale_values');
 $lang = $this->lang();
 $valueLang = $filterLocale ? [$lang, ''] : null;
+
+$useMediaRender = false;
+$useMiradorViewer = false;
+$useUniversalViewer = false;
+
+foreach ($itemMedia as $media) {
+    $mediaType = $media->mediaType();
+    $mediaRenderer = $media->renderer();
+    if (strpos($mediaRenderer, 'iiif') !== false
+    || $mediaType === 'image/jpeg' 
+    ) {
+        $useMiradorViewer = true;
+    }
+    elseif (strpos($mediaType, 'pdf') !== false 
+    ) {
+        $useUniversalViewer = true;
+    }
+    else {
+        $useMediaRender = true;
+    break;
+    }
+}
 ?>
 
 <div class="resource-title">
@@ -30,6 +52,17 @@ $valueLang = $filterLocale ? [$lang, ''] : null;
 
 <div class="<?php echo ($showLayout == 'inline') ? 'inline' : 'stack'; ?>">
     <?php $this->trigger('view.show.before'); ?>
+
+    <div class="full-width-main margin-bottom-2 xlarge-margin-bottom-3">
+    <?php if ($useMiradorViewer): ?>
+        <?php echo $this->mirador($item); ?> 
+    <?php elseif ($useUniversalViewer): ?>    
+        <?php echo $this->universalViewer($item); ?> 
+    <?php elseif ($useMediaRender): ?>    
+        <?php echo $media->render(); ?> 
+    <?php endif; ?>
+    </div>
+
     <?php if ($fullWidthMainHasBlocks): ?>
     <div class="full-width-main margin-bottom-2 xlarge-margin-bottom-3">
         <?php echo $fullWidthMainBlockContent->getBlocks(); ?>
