--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -697,8 +697,10 @@ button#unblur-image {
 
 h3.warning-text {
 font-weight: 400;
+color: $dark-gray;
 }
 
+/*Sensitive content - container*/
 .sensitive-material .large-7 {
 order: 1;
 margin-top: 4 * $global-margin;
@@ -707,6 +709,23 @@ margin-top: 4 * $global-margin;
   order: 0;
   }
 }
+
+/*Sensitive content - icon and message*/
+.sensitive-content {
+  position: absolute;
+  z-index: 99999;
+  background: #ffffff9c;
+  border-radius: 0.5rem;
+}
+
+#unblur-image {
+background-color: unset!important;
+}
+
+#unblur-image[aria-expanded="false"] .sensitive-content {
+display: none;
+}
+
 /*End Sensitive Material*/
 
 .text {
