--- a/view/common/block-layout/resource-text-sensitive-content-icon.phtml
+++ b/view/common/block-layout/resource-text-sensitive-content-icon.phtml
@@ -26,11 +26,11 @@ $lang = $filterLocale ? $this->lang() : null; ?>
     </div>
     <?php
 endif; ?>
-    <div class="large-7">
+    <div class="large-7 flex-container align-center">
         <div id="unblur-image" type="button" data-toggle="blur-image-<?=$uniqueId
-?>" class="flex-container flex-dir-column align-spaced large-padding-right-1 large-padding-right-0 large-padding-top-1 align-center">
+?>" class="flex-container flex-dir-column align-spaced large-padding-right-1 large-padding-right-0 large-padding-top-1 margin-bottom-0 align-middle">
             <div class="sensitive-content padding-1 large-padding-2 xlarge-padding-3 flex-container flex-dir-column">
-                <h3 class="h4 warning-text margin-bottom-2 xlarge-bottom-top-3">Visitors may find this image offensive or upsetting. Click or press to view.</h3>
+                <h3 class="h4 warning-text margin-bottom-2 xlarge-bottom-top-3">This image contains sensitive content. Click or press to view.</h3>
                 <i class="far fa-eye-slash fa-lg" style="color: #000000; margin: 0 auto; font-size: 3rem;"></i>
             </div>
             <div class="attachments">
