--- a/view/common/block-layout/resource-text-sensitive-content.phtml
+++ b/view/common/block-layout/resource-text-sensitive-content.phtml
@@ -16,86 +16,86 @@ $hyperlink = $this->plugin('hyperlink');
 $siteSetting = $this->plugin('siteSetting');
 $uniqueId = uniqid();
 $linkType = $siteSetting('attachment_link_type', 'item');
-
-$filterLocale = (bool) $this->siteSetting('filter_locale_values');
-$lang = $filterLocale ? $this->lang() : null;
-?>
+$filterLocale = (bool)$this->siteSetting('filter_locale_values');
+$lang = $filterLocale ? $this->lang() : null; ?>
 
 <div class="sensitive-material block media-text grid-x grid-padding-x align-spaced">
     <?php if (!empty($heading)): ?>
     <div class="media-text-heading">
-        <h3 class="h2 padding-vertical-1"><?= $escape($heading) ?></h3>
+        <h3 class="h2 padding-vertical-1"><?=$escape($heading) ?></h3>
     </div>
-    <?php endif; ?>
-    <div class="large-7">
-        <div class="flex-container flex-dir-column align-spaced large-padding-right-1 large-padding-right-0 large-padding-top-1">
-            <div class="attachments">
-                <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file media-text-image unblur-image" id="blur-image-<?= $uniqueId ?>" data-toggler=".unblur-image">
-                
-                    <?php
-                        foreach ($attachments as $attachment):
-                            $render = null;
-                            $title = null;
-                            $link = null;
-                            $item = $attachment->item();
-                            if ($item):
-                                $media = $attachment->media() ? : $item->primaryMedia();
-                                $mediaRenderer = $media->renderer();
-                                $mediaType = $media->mediaType();
-                                if ($media && $mediaRenderer === 'iiif') :
-                            echo $item->linkRaw($this->thumbnail($media, $this->thumbnailType));
-                            elseif ($media && $mediaType === 'image/jpeg') :
-                            echo $item->linkRaw($this->thumbnail($media, $this->thumbnailType));
-                            elseif ($media) :
-                            echo $media->render([
-                            'thumbnailType' => $thumbnailType,
-                            'link' => $link,
-                                ]);
-                            endif;
-
-                                if ($showTitleOption == 'item_title'):
-                                    $title = $item->displayTitle(null, $lang);
-                                elseif ($media && $showTitleOption == 'file_name'):
-                                    $title = $media->displayTitle(null, $lang);
-                                endif;
-
-                                if ($title):
-                                    if ($media && $linkType === 'media'):
-                                        $link = $media->link($title);
-                                    elseif ($media && $linkType === 'original' && $media->hasOriginal()):
-                                        $link = $hyperlink($title, $media->originalUrl());
-                                    else:
-                                        $link = $item->link($title);
-                                    endif;
-                                endif;
-                            endif;
-
-                            $caption = $attachment->caption();
-                        ?>
-                        <div class="item resource">
-                            <?= $render ?>                
-                            <div class="caption">
-                            <?= $caption ?>                   
-                            </div>
-                        </div>
-                        <?php endforeach; ?>
-                    </div>
+    <?php
+endif; ?>
+    <div class="large-7 flex-container align-center">
+        <button id="unblur-image" type="button" data-toggle="blur-image-<?=$uniqueId
+?>" class="flex-container flex-dir-column align-spaced large-padding-right-1 large-padding-right-0 large-padding-top-1 margin-bottom-0 align-middle">
+            <div class="sensitive-content margin-horizontal-1 large-margin-horizontal-2 padding-1 large-padding-2 xlarge-padding-3 flex-container flex-dir-column">
+                <h3 class="h4 warning-text margin-bottom-2 xlarge-bottom-top-3">This image contains sensitive content. Click or press to view.</h3>
+                <i class="far fa-eye-slash fa-lg"></i>
             </div>
-        </div> 
+            <div class="attachments">
+                <div class="<?=$alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file media-text-image unblur-image" id="blur-image-<?=$uniqueId ?>" data-toggler=".unblur-image">
+                    <?php
+foreach ($attachments as $attachment):
+    $render = null;
+    $title = null;
+    $link = null;
+    $item = $attachment->item();
+    if ($item):
+        $media = $attachment->media() ? : $item->primaryMedia();
+        $mediaRenderer = $media->renderer();
+        $mediaType = $media->mediaType();
+        if ($media && $mediaRenderer === 'iiif'):
+            echo $this->thumbnail($media, $this->thumbnailType);
+        elseif ($media && $mediaType === 'image/jpeg'):
+            echo $this->thumbnail($media, $this->thumbnailType);
+        elseif ($media):
+            echo $media->render(['thumbnailType' => $thumbnailType, 'link' => $link, ]);
+        endif;
+        if ($showTitleOption == 'item_title'):
+            $title = $item->displayTitle(null, $lang);
+        elseif ($media && $showTitleOption == 'file_name'):
+            $title = $media->displayTitle(null, $lang);
+        endif;
+        if ($title):
+            if ($media && $linkType === 'media'):
+                $link = $media->link($title);
+            elseif ($media && $linkType === 'original' && $media->hasOriginal()):
+                $link = $hyperlink($title, $media->originalUrl());
+            else:
+                $link = $item->link($title);
+            endif;
+        endif;
+    endif;
+    $caption = $attachment->caption(); ?>
+                    <div class="item resource">
+                        <?=$render
+?>
+                        <div class="caption">
+                            <?=$caption
+?>
+                        </div>
+                    </div>
+                    <?php
+endforeach; ?>
+                </div>
+            </div>
+        </button>
     </div>
     <div class="resource-text large-5 flex-container flex-dir-column align-center padding-1 large-padding-2 xlarge-padding-3">
-    <div class="metadata margin-bottom-1 separator-center">
-        <?php $showTitleOption = $this->showTitleOption; ?>
-        <?php if ($showTitleOption == 'item_title'): ?>
-        <h3><?php echo $item->link($item->displayTitle()); ?></h3>
-        <?php elseif ($showTitleOption == 'file_name'): ?>
-        <h3><?php echo $item->link($media->displayTitle()); ?></h3>
-        <?php endif; ?>
-      </div>
-    <div class="text font-wide">
-        <?= $html ?>
+        <div class="metadata margin-bottom-1 separator-center">
+            <?php $showTitleOption = $this->showTitleOption; ?>
+            <?php if ($showTitleOption == 'item_title'): ?>
+            <h3><?php echo $item->link($item->displayTitle()); ?></h3>
+            <?php
+elseif ($showTitleOption == 'file_name'): ?>
+            <h3><?php echo $item->link($media->displayTitle()); ?></h3>
+            <?php
+endif; ?>
+        </div>
+        <div class="text font-wide">
+            <?=$html
+?>
+        </div>
     </div>
-    <h3 class="h4 warning-text margin-bottom-2 xlarge-bottom-top-3">This image contains material visitors may find offensive or upsetting.</h3>
-    <button class="button warning" id="unblur-image" type="button" data-toggle="blur-image-<?= $uniqueId ?>">Click to view image</button>
-</div>
 </div>
